--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -640,6 +640,11 @@
     CUDA: _embedding_bag_dense_backward_cuda
 
 - func: empty(IntList size, TensorOptions options={}) -> Tensor
+  dispatch:
+    CPU: empty_cpu
+    CUDA: empty_cuda
+    SparseCPU: empty_sparse_cpu
+    SparseCUDA: empty_sparse_cuda
 
 - func: empty_out(Tensor result, IntList size) -> Tensor
 
@@ -1886,7 +1891,6 @@
 
 - func: addmm_(Tensor self, Tensor mat1, Tensor mat2, *, Scalar beta=1, Scalar alpha=1) -> Tensor
   variants: method
-
 
 - func: native_tensor(TensorOptions options) -> Tensor
   variants: []
