--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -45,7 +45,7 @@
   dispatch:
     CUDA: _cudnn_rnn_backward
 
-- func: _cudnn_init_dropout_state(Type self_ty, double dropout, bool train, int64_t dropout_seed) -> Tensor
+- func: _cudnn_init_dropout_state(double dropout, bool train, int64_t dropout_seed, TensorOptions options) -> Tensor
   dispatch:
     CUDA: _cudnn_init_dropout_state
 
@@ -640,6 +640,12 @@
     CUDA: _embedding_bag_dense_backward_cuda
 
 - func: empty(IntList size, TensorOptions options={}) -> Tensor
+  cpu_half: True
+  dispatch:
+    CPU: empty_cpu
+    CUDA: empty_cuda
+    SparseCPU: empty_sparse
+    SparseCUDA: empty_sparse
 
 - func: empty_out(Tensor result, IntList size) -> Tensor
 
@@ -1916,7 +1922,7 @@
 # just only ever dispatch to CPULongTensor or CUDALongTensor, but that
 # seems a bit too finely balanced.)
 
-- func: native_sparse_coo_tensor(Type self_ty, IntList size) -> Tensor
+- func: native_sparse_coo_tensor(IntList size, TensorOptions options) -> Tensor
   variants: []
   dispatch:
     SparseCPU: new_with_size_sparse
