--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -2929,3 +2929,58 @@
 - func: remainder(Tensor self, Tensor other) -> Tensor
   variants: method, function
   device_guard: false
+
+- func: min_out(Tensor result, Tensor self, Tensor other) -> Tensor
+  device_guard: false
+
+- func: min(Tensor self, Tensor other) -> Tensor
+  variants: method, function
+  device_guard: false
+
+- func: min(Tensor self) -> Tensor
+  variants: method, function
+  device_guard: false
+
+- func: max_out(Tensor result, Tensor self, Tensor other) -> Tensor
+  device_guard: false
+
+- func: max(Tensor self, Tensor other) -> Tensor
+  variants: method, function
+  device_guard: false
+
+- func: max(Tensor self) -> Tensor
+  variants: method, function
+  device_guard: false
+
+- func: median(Tensor self) -> Tensor
+  variants: method, function
+  device_guard: false
+
+- func: sort_out(Tensor values, Tensor indices, Tensor self, int64_t dim=-1, bool descending=false) -> (Tensor, Tensor)
+  device_guard: false
+
+- func: sort(Tensor self, int64_t dim=-1, bool descending=false) -> (Tensor, Tensor)
+  variants: method, function
+  device_guard: false
+
+- func: topk_out(Tensor values, Tensor indices, Tensor self, int64_t k, int64_t dim=-1, bool largest=true, bool sorted=true) -> (Tensor, Tensor)
+  device_guard: false
+
+- func: topk(Tensor self, int64_t k, int64_t dim=-1, bool largest=true, bool sorted=true) -> (Tensor, Tensor)
+  variants: method, function
+  device_guard: false
+
+- func: all(Tensor self) -> Tensor
+  variants: method, function
+  device_guard: false
+
+- func: any(Tensor self) -> Tensor
+  variants: method, function
+  device_guard: false
+
+- func: renorm_out(Tensor result, Tensor self, Scalar p, int64_t dim, Scalar maxnorm) -> Tensor
+  device_guard: false
+
+- func: renorm(Tensor self, Scalar p, int64_t dim, Scalar maxnorm) -> Tensor
+  variants: method, function
+  device_guard: false
