--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -2302,6 +2302,10 @@
   variants: method
   device_guard: false
 
+- func: data_ptr(Tensor self) -> void*
+  variants: method
+  device_guard: false
+
 - func: set_(Tensor self, Storage source) -> Tensor
   variants: method
   device_guard: false
