--- a/aten/src/ATen/nn.yaml
+++ b/aten/src/ATen/nn.yaml
@@ -2,54 +2,54 @@
 
 - name: binary_cross_entropy(Tensor self, Tensor target, Tensor weight={}, int64_t reduction=Reduction::Mean)
   cname: BCECriterion
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
 
 - name: l1_loss(Tensor self, Tensor target, int64_t reduction=Reduction::Mean)
   cname: AbsCriterion
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
 
 - name: mse_loss(Tensor self, Tensor target, int64_t reduction=Reduction::Mean)
   cname: MSECriterion
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
 
 - name: multi_margin_loss(Tensor self, LongTensor target, Scalar p=1, Scalar margin=1, Tensor weight={}, int64_t reduction=Reduction::Mean)
   cname: MultiMarginCriterion
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
 
 - name: multilabel_margin_loss(Tensor self, LongTensor target, int64_t reduction=Reduction::Mean)
   cname: MultiLabelMarginCriterion
   buffers: [is_target]
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
-    is_target: target_->dim() == 0
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
+#    is_target: target_->dim() == 0
 
 - name: nll_loss(Tensor self, LongTensor target, Tensor weight={}, int64_t reduction=Reduction::Mean, int64_t ignore_index=-100)
   cname: ClassNLLCriterion
   buffers: [total_weight]
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
-    total_weight: 'true'
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
+#    total_weight: 'true'
 
 - name: nll_loss2d(Tensor self, LongTensor target, Tensor weight={}, int64_t reduction=Reduction::Mean, int64_t ignore_index=-100)
   cname: SpatialClassNLLCriterion
   buffers: [total_weight]
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
-    total_weight: 'true'
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
+#    total_weight: 'true'
 
 - name: smooth_l1_loss(Tensor self, Tensor target, int64_t reduction=Reduction::Mean)
   cname: SmoothL1Criterion
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
 
 - name: soft_margin_loss(Tensor self, Tensor target, int64_t reduction=Reduction::Mean)
   cname: SoftMarginCriterion
-  scalar_check:
-    output: reduction != Reduction::None || self_->dim() == 0
+#  scalar_check:
+#    output: reduction != Reduction::None || self_->dim() == 0
 
 # Activation functions
 
@@ -64,45 +64,45 @@
   cname: GatedLinear
   wrap_dim:
     dim: self
-  scalar_check:
-    output: 'false'
+#  scalar_check:
+#    output: 'false'
 
 - name: hardtanh(Tensor self, Scalar min_val=-1, Scalar max_val=1)
   cname: HardTanh
   has_inplace: True
-  scalar_check:
-    output: self_->dim() == 0
+#  scalar_check:
+#    output: self_->dim() == 0
 
 - name: leaky_relu(Tensor self, Scalar negative_slope=0.01)
   cname: LeakyReLU
   has_inplace: True
-  scalar_check:
-    output: self_->dim() == 0
+#  scalar_check:
+#    output: self_->dim() == 0
 
 - name: log_sigmoid(Tensor self)
   cname: LogSigmoid
   buffers: [buffer]
-  scalar_check:
-    output: self_->dim() == 0
-    buffer: self_->dim() == 0
+#  scalar_check:
+#    output: self_->dim() == 0
+#    buffer: self_->dim() == 0
 
 # NOTE: we treat noise as an input (it's really a buffer) because the codegen
 # can't handle in-place functions that have buffers
 - name: rrelu_with_noise(Tensor self, Tensor noise, Scalar lower=0.125, Scalar upper=0.3333333333333333, bool training=false, Generator* generator=nullptr)
   cname: RReLU
   has_inplace: True
-  scalar_check:
-    output: self_->dim() == 0
+#  scalar_check:
+#    output: self_->dim() == 0
 
 - name: softplus(Tensor self, Scalar beta=1, Scalar threshold=20)
   cname: SoftPlus
-  scalar_check:
-    output: self_->dim() == 0
+#  scalar_check:
+#    output: self_->dim() == 0
 
 - name: softshrink(Tensor self, Scalar lambd=0.5)
   cname: SoftShrink
-  scalar_check:
-    output: self_->dim() == 0
+#  scalar_check:
+#    output: self_->dim() == 0
 
 # Pooling
 
