--- a/aten/src/ATen/nn.yaml
+++ b/aten/src/ATen/nn.yaml
@@ -230,11 +230,12 @@
 # Private functions. These also exist in TH, but we want the backwards functions
 # to implement derivatives.
 
-- name: _thnn_sigmoid(Tensor self)
+- name: sigmoid(Tensor self)
   cname: Sigmoid
   scalar_check:
     output: 'false'
     grad_input: 'false'
+  buffers: []
 
 - name: _thnn_tanh(Tensor self)
   cname: Tanh
